--- a/css/template.css
+++ b/css/template.css
@@ -119,6 +119,37 @@ header nav>a:last-of-type {
     }
 }
 
+@media (min-width: 900px) {
+    header .fa-chevron-down {
+        display: none;
+    }
+
+    header nav {
+        position: static;
+        height: 100%;
+        width: auto;
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+    }
+
+    header nav:hover, header nav:focus {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+    }
+
+    header nav>a, header nav>a:last-of-type {
+        padding: 0 0.5rem;
+        margin: 0;
+    }
+
+    header nav>a:hover, header nav>a:focus {
+        background-color: var(--grey-2);
+        text-decoration: underline;
+    }
+}
+
 /* TODO: Section styles will go here. */
 
 section {
