--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
     --grey-1: #242424;
     --grey-2: #202020;
     --grey-3: #484848;
+    --black: #000000;
     --black-1: #1a1c23;
     --black-2: #23252F;
     --black-3: #2B2E3B;
@@ -200,18 +201,40 @@ section a {
     text-decoration: none;
     color: var(--white);
     font-size: 1.4rem;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.2, 0.5, 0.7);
+    transition-duration: 0.4s;
+}
+
+section a:hover {
+    transform: translate(0, -0.4rem);
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.2, 0.5, 0.7);
+    transition-duration: 0.4s;
 }
 
 section a:first-of-type {
     background-color: var(--black-1);
 }
 
+section a:first-of-type:hover {
+    background-color: var(--black);
+}
+
 section a:nth-of-type(2) {
     background-color: var(--black-2);
 }
 
+section a:nth-of-type(2):hover {
+    background-color: var(--black-1);
+}
+
 section a:last-of-type {
     background-color: var(--black-3);
+}
+
+section a:last-of-type:hover {
+    background-color: var(--black-2);
 }
 
 
