Add media query to template.html and all new pages derived from it. This sets a max height for the footer at >900px vw.

--- a/css/about.css
+++ b/css/about.css
@@ -170,6 +170,13 @@ footer {
     flex-flow: column nowrap;
 }
 
+@media (min-width: 900px) {
+    footer {
+        min-height: fit-content;
+        padding-bottom: 7rem;
+    }
+}
+
 footer img {
     width: 50px;
     border-radius: 25px;
