--- a/css/template.css
+++ b/css/template.css
@@ -170,6 +170,13 @@ footer {
     flex-flow: column nowrap;
 }
 
+@media (min-width: 900px) {
+    footer {
+        min-height: fit-content;
+        padding-bottom: 7rem;
+    }
+}
+
 footer img {
     width: 50px;
     border-radius: 25px;
