--- a/css/index.css
+++ b/css/index.css
@@ -155,9 +155,8 @@ header nav>a:last-of-type {
 
 section {
     width: calc(100vw - 2rem);
-    margin-top: 60px;
     background-color: var(--orange-1);
-    padding: 0 1rem;
+    padding: 60px 1rem 0 1rem;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
