--- a/css/about.css
+++ b/css/about.css
@@ -154,10 +154,9 @@ header nav>a:last-of-type {
 /* TODO: Section styles will go here. */
 
 section {
-    width: calc(100vw - 2rem);
-
+    width: 100vw;
     background-color: var(--white);
-    padding: 60px 1rem 0 1rem;
+    padding-top: 60px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
@@ -165,8 +164,8 @@ section {
 }
 
 .about {
-    width: calc(100% - 2rem);
-    padding-top: 1rem;
+    width: calc(100% - 4rem);
+    padding: 2rem;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -177,7 +176,19 @@ section {
     font-size: 2rem;
 }
 
+.about p>span {
+    background: var(--grey-1);
+    padding: 0 0.4rem;
+    color: var(--white);
+}
+
+.about p {
+    padding-bottom: 1rem;
+    font-size: 1.4rem;
+}
+
 .skillset {
+    padding: 2rem 0;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -190,7 +201,7 @@ section {
 }
 
 .skillset h2 {
-    padding: 1.5rem 0;
+    padding-bottom: 1.5rem;
     font-size: 2rem;
 }
 
@@ -214,7 +225,6 @@ section {
 }
 
 .skillset li>i {
-    fill: var(--white);
     font-size: 1rem;
 }
 
@@ -223,10 +233,6 @@ section {
     height: 1rem;
     width: 1rem;
 }
-
-
-
-
 
 footer {
     position: relative;
@@ -305,4 +311,3 @@ footer>hr {
     bottom: 2rem;
     border-color: var(--white);
 }
-
