--- a/css/index.css
+++ b/css/index.css
@@ -239,14 +239,15 @@ section a:last-of-type:hover {
         width: 80%;
         flex-flow: row nowrap;
         justify-content: space-between;
-        padding: 0 10%;
+        padding: 60px 10% 3rem 10%;
     }
 }
 
 @media (min-width: 1000px) {
     section {
         width: 800px;
-        padding: 0 calc(calc(100% - 800px) / 2);
+        padding-left: calc(calc(100% - 800px) / 2);
+        padding-right: calc(calc(100% - 800px) / 2);
         flex-flow: row nowrap;
         justify-content: space-between;
 
