--- a/css/projects.css
+++ b/css/projects.css
@@ -151,14 +151,86 @@ header nav>a:last-of-type {
     }
 }
 
-/* TODO: Section styles will go here. */
-
 section {
-    width: calc(100vw - 2rem);
-    padding-top: 60px;
-    height: calc(50vh - 60px);
-    background-color: var(--white)
+    width: calc(100% - 2rem);
+    padding: 60px 1rem 0 1rem;
+    background-color: var(--white);
 }
+
+h1 {
+    padding: 1.5rem 0 2rem 0;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.projects-container>div {
+    width: calc(100% - 2rem);
+    height: calc(200px - 2em);
+    background-color: var(--grey-1);
+    padding: 1rem;
+    margin-bottom: 2.5rem;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: left;
+}
+
+div.project-1 {
+    grid-area: project-1;
+    background: linear-gradient(0.25turn, rgba(200, 210, 225, 0.1), rgba(200, 210, 225, 0.2)), url("../assets/projects/architect.png");
+    background-position: center;
+    background-size: cover;
+}
+
+div.project-2 {
+    grid-area: project-2;
+    background: linear-gradient(0.25turn, rgba(210, 210, 255, 0.1), rgba(210, 210, 225, 0.2)), url("../assets/projects/spacefrens.png");
+    background-position: center;
+    background-size: cover;
+}
+
+div.project-3 {
+    grid-area: project-3;
+    background: linear-gradient(0.25turn, rgba(210, 225, 225, 0.1), rgba(225, 210, 225, 0.2)), url("../assets/projects/pokedex.png");
+    background-position: center;
+    background-size: cover;
+}
+
+div.project-4 {
+    grid-area: project-4;
+    background: linear-gradient(0.25turn, rgba(90, 20, 10, 0.2), rgba(90, 20, 10, 0.1)), url("../assets/projects/platformer-crop.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.projects-container h2, .projects-container p, .projects-container a {
+    width:fit-content;
+    background: rgba(0, 0, 0, 0.6);
+    margin-bottom: 1rem;
+    padding: 0.2rem 0.5rem;
+    color: var(--white);
+}
+
+.projects-container h2 {
+    font-size: 1.25rem;
+}
+
+.projects-container span>a {
+    margin-right: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 footer {
     position: relative;
