--- a/css/projects.css
+++ b/css/projects.css
@@ -219,7 +219,73 @@ div.project-4 {
     margin-right: 1rem;
 }
 
+@media (min-width: 500px) {
 
+    h1 {
+        padding-bottom: 2.5rem;
+    }
+
+    .projects-container {
+        display: grid;
+        grid-template-columns: repeat(10, 10%);
+        grid-template-rows: repeat(4, 20rem);
+        grid-template-areas:
+        ". project-1 project-1 project-1 project-1 project-1 project-1 . . ."
+        ". . . project-2 project-2 project-2 project-2 project-2 project-2 ."
+        ". project-3 project-3 project-3 project-3 project-3 project-3 . . ."
+        ". . . project-4 project-4 project-4 project-4 project-4 project-4 .";
+        row-gap: 1rem;
+    }
+
+    .projects-container>div {
+        height: auto;
+        width: auto;
+        margin-bottom: none;
+    }
+
+    div.project-1:hover {
+        grid-area: project-1;
+        background: linear-gradient(0.25turn, rgba(200, 210, 225, 0.3), rgba(200, 210, 225, 0.3)), url("../assets/projects/architect.png");
+        background-position: center;
+        background-size: cover;
+    }
+    
+    div.project-2:hover {
+        grid-area: project-2;
+        background: linear-gradient(0.25turn, rgba(210, 210, 255, 0.3), rgba(210, 210, 225, 0.3)), url("../assets/projects/spacefrens.png");
+        background-position: center;
+        background-size: cover;
+    }
+    
+    div.project-3:hover {
+        grid-area: project-3;
+        background: linear-gradient(0.25turn, rgba(210, 225, 225, 0.3), rgba(225, 210, 225, 0.3)), url("../assets/projects/pokedex.png");
+        background-position: center;
+        background-size: cover;
+    }
+    
+    div.project-4:hover {
+        grid-area: project-4;
+        background: linear-gradient(0.25turn, rgba(210, 210, 255, 0.1), rgba(210, 210, 225, 0.1)), url("../assets/projects/platformer-crop.png");
+        background-position: center;
+        background-size: cover;
+    }
+
+}
+
+@media (min-width: 1200px) {
+
+    section {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .projects-container {
+        width: 1160px;
+    }
+}
 
 
 
